# pywa-mcp-server

./: .env.example  CLAUDE.md  README.md  claude_desktop_config.example.json  main.py  pyproject.toml  server.py
tools/: __init__.py  interactive.py  messaging.py  templates.py
