[project]
name = "pywa-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for WhatsApp Business API integration using PyWA"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["whatsapp", "mcp", "claude", "pywa", "business-api", "langraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.13.1",
    "pywa>=3.0.0", 
    "fastmcp>=0.1.0",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/yourusername/pywa-mcp-server"
Repository = "https://github.com/yourusername/pywa-mcp-server"
Issues = "https://github.com/yourusername/pywa-mcp-server/issues"

[project.scripts]
pywa-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
py-modules = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
